[gd_scene load_steps=20 format=2]

[ext_resource path="res://scenes/player_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/player.gd" type="Script" id=2]
[ext_resource path="res://stages/worldScript.gd" type="Script" id=3]
[ext_resource path="res://enemy/EnemySpawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Stars.tscn" type="PackedScene" id=5]
[ext_resource path="res://sfx/Tiro do protagonista pou pou.mp3" type="AudioStream" id=7]
[ext_resource path="res://sfx/Inimigo.mp3" type="AudioStream" id=8]
[ext_resource path="res://sfx/inimigomorrendo.mp3" type="AudioStream" id=9]
[ext_resource path="res://sfx/inimigotomandodano.mp3" type="AudioStream" id=10]
[ext_resource path="res://sprites_wave/finalScreen.png" type="Texture" id=11]
[ext_resource path="res://sprites_wave/g_jf_hkuk_jbgjbv_hcuk_ljtgo78u78ttu78i7d56ti876t.png" type="Texture" id=12]
[ext_resource path="res://sprites/Fundo1.jpg" type="Texture" id=13]
[ext_resource path="res://interface/GameOverScene.tscn" type="PackedScene" id=14]

[sub_resource type="Animation" id=1]
resource_name = "Attack"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("tilesheetwave:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0236557, 0.0477741, 0.0700641, 0.0959832, 0.12066, 0.144405, 0.178005, 0.188554 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 5, 6, 7, 1, 1 ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 20.1672
height = 37.4211

[sub_resource type="DynamicFontData" id=3]
font_path = "res://fonts/m5x7.ttf"

[sub_resource type="DynamicFont" id=4]
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://fonts/m5x7.ttf"

[sub_resource type="DynamicFont" id=6]
font_data = SubResource( 5 )

[node name="world" type="Node2D"]
script = ExtResource( 3 )
score = 0

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 20, 179.79 )
collision_layer = 2
collision_mask = 21
script = ExtResource( 2 )

[node name="sprite" parent="player" index="0"]
visible = false
position = Vector2( -0.353546, 1.06073 )
rotation = 1.5708
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 11 )
flip_v = true

[node name="shape" parent="player" index="1"]
scale = Vector2( 2.5, 1.25 )

[node name="tilesheetwave" type="Sprite" parent="player"]
rotation = -1.56767
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 12 )
hframes = 2
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="player"]
anims/Attack = SubResource( 1 )

[node name="ShootTimer" type="Timer" parent="player"]
wait_time = 1.5
one_shot = true

[node name="Muzzle" type="Position2D" parent="player"]
position = Vector2( -15.6845, -30.5752 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="player"]
rotation = 1.51484
shape = SubResource( 2 )

[node name="playerShoot" type="AudioStreamPlayer" parent="player"]
stream = ExtResource( 7 )

[node name="EnemySpawner" parent="." instance=ExtResource( 4 )]
position = Vector2( -212.561, -80.3971 )

[node name="score" type="Label" parent="."]
margin_left = 24.0
margin_top = 19.0
margin_right = 107.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 4 )
text = "BOSS
"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="Stars" parent="." instance=ExtResource( 5 )]
position = Vector2( 104.475, 226.97 )

[node name="enemyDying" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="enemyDamage" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="enemySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -102

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 640, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 408.767, 181.787 )
scale = Vector2( 0.233968, 0.233968 )
texture = ExtResource( 13 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" parent="Control" instance=ExtResource( 14 )]
visible = false
margin_left = 237.355
margin_top = 125.183
margin_right = 364.355
margin_bottom = 202.183

[node name="lifes" type="Label" parent="."]
margin_left = 23.5969
margin_top = 38.6988
margin_right = 63.5969
margin_bottom = 52.6988
custom_fonts/font = SubResource( 6 )
text = "Lifes:"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="player" to="player" method="_on_ship_area_entered"]
[connection signal="player_died" from="player" to="Control/VBoxContainer" method="_on_PlayerDeath"]
[connection signal="spawn_laser" from="player" to="." method="_on_ship_spawn_laser"]
[connection signal="timeout" from="player/ShootTimer" to="player" method="ready_to_shoot"]
[connection signal="add_score" from="EnemySpawner" to="." method="score"]

[editable path="player"]
